--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,15 @@
 <!DOCTYPE web-app PUBLIC
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "http://java.sun.com/dtd/web-app_2_5.dtd" >
 
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
-
+    <filter>
+        <filter-name>AuthFilter</filter-name>
+        <filter-class>com.example.filter.AuthFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthFilter</filter-name>
+        <url-pattern>/user/*</url-pattern>
+    </filter-mapping>
 </web-app>
